Change number field handling
Revert to text fields; remove $, % and commas before saving to the db.
The various browsers were kind of all over the map on this, esp Safari.

--- a/includes/css/aha-extras-tab.css
+++ b/includes/css/aha-extras-tab.css
@@ -34,6 +34,11 @@
 .aha-survey .follow-up-question.enabled {
 	display: block;
 }
+.aha-survey .input-helper {
+	font-size: 90%;
+	color: #666;
+	font-style: italic;
+}
 
 /* Summary page styles */
 .progress-dial{
