Unify survey styling
Un-nest hand coded related questions. Use same styling for all question
labels. Change some "text" questions to "number" type.

--- a/includes/css/aha-extras-tab.css
+++ b/includes/css/aha-extras-tab.css
@@ -28,6 +28,7 @@
 /*Handling showing/hiding "related" questions*/
 .aha-survey .follow-up-question {
 	display: none;
+	margin-top: -3em;
 	padding: .5em 1.5em;
 	/*background-color: #FFFFEA; /*#fef4dd;*/*/
 }
