--- a/includes/css/aha-extras-tab.css
+++ b/includes/css/aha-extras-tab.css
@@ -63,3 +63,18 @@
 	box-shadow: none;
 	border-radius: 0;
 }
+.assessment tr.summary-table-section {
+	border-top: 2px solid #666;
+} 
+.assessment tr.summary-table-section td {
+	font-weight: bold;
+} 
+.assessment td.healthy {
+	color: green;
+}
+.assessment td.intermediate {
+	color: yellow;
+}
+.assessment td.poor {
+	color: red;
+}
