Change Board selection method
Moves selecting affiliation and currently active board for usermeta,
survey and summary cookies into a single UI that is used everywhere.

--- a/includes/css/aha-extras-tab.css
+++ b/includes/css/aha-extras-tab.css
@@ -5,6 +5,12 @@
 .message.toggle-open .first {
 	margin-bottom: 1.8em;
 }
+.toggle-content {
+	margin-top: 1em;
+}
+.toggle-content .submit {
+	margin-top: 1em;
+}
 .aha-survey.standard-form label {
 	margin-top: 8px;
 }
