--- a/includes/css/aha-extras-tab.css
+++ b/includes/css/aha-extras-tab.css
@@ -111,7 +111,7 @@
 	color: green;
 }
 
-@media screen and (min-width:600px), print and (min-width:8in) {
+@media screen and (min-width:600px), print and (min-width:6in) {
 	.dial-container {
 		float: left;
 		width: 28.5%;
@@ -119,7 +119,7 @@
 		margin-right: 2%;
 	}
 }
-@media all and (min-width:800px), print and (min-width:8in) { 
+@media all and (min-width:800px), print and (min-width:6in) { 
 	.assessment .third-block.spans-2 {
 	    float: right;
 	}
@@ -135,5 +135,15 @@
 		width: 100%;
 		margin-left: 0;
 		margin-right: 0;
+	}
+}
+@media print {
+	/*Hide many page elements that aren't needed here*/
+	.assessment .primary-navigation,
+	.assessment #item-header,
+	.assessment #secondary,
+	.assessment .summary-navigation-container,
+	.assessment .single-group-footer {
+	 	display: none;
 	}
 }
