--- a/includes/css/aha-extras-tab.css
+++ b/includes/css/aha-extras-tab.css
@@ -193,6 +193,11 @@
 /**** SUMMARY REPORT CARD STYLES  ****/
 #summary-report-card ul.horizontal li.filter-type{
 	font-size:1.2em;
+	line-height:1.2em;
+}
+#summary-report-card ul#geography, 
+#summary-report-card ul#top3 {
+	margin-bottom:0em;
 }
 table#report-card-table th{
 	text-align:center;
@@ -378,7 +383,7 @@ tr.criteria-row th {
 		background-image:none !important;
 	}
 	table#report-card-table thead{
-	display:table-header-group;
+		display:table-header-group;
 	}
 	table#report-card-table tbody {
 		display:table-row-group;
@@ -386,6 +391,10 @@ tr.criteria-row th {
 	table#report-card-table .overall-header{
 		display:none;
 	}
+	.top-3-row{
+		display:none;
+	}
+		
 	.print-only{
 		display:block;
 	}
