--- a/includes/css/aha-extras-tab.css
+++ b/includes/css/aha-extras-tab.css
@@ -253,12 +253,45 @@ table#report-card-table-sticky .healthy{
 	background-repeat:no-repeat;
 	background-position:center center;
 }
+table#report-card-table .healthy.community_tobacco_1-top-3,
+table#report-card-table .healthy.community_tobacco_2-top-3,
+table#report-card-table .healthy.community_phys_1-top-3,
+table#report-card-table .healthy.community_diet_1-top-3,
+table#report-card-table .healthy.community_diet_2-top-3,
+table#report-card-table .healthy.community_diet_3-top-3,
+table#report-card-table .healthy.school_phys_1-top-3,
+table#report-card-table .healthy.school_phys_2-top-3,
+table#report-card-table .healthy.school_diet_1-top-3,
+table#report-card-table .healthy.school_diet_2-top-3,
+table#report-card-table .healthy.school_cpr_1-top-3,
+table#report-card-table .healthy.care_factors_1-top-3,
+table#report-card-table .healthy.care_acute_1-top-3,
+table#report-card-table .healthy.care_acute_2-top-3 {
+	background-image: url('../im/healthy_40_star.png');
+}
+
 
 table#report-card-table .intermediate,
 table#report-card-table-sticky .intermediate{
 	background-image: url('../im/intermediate_40.png');
 	background-repeat:no-repeat;
 	background-position:center center
+}
+table#report-card-table .intermediate.community_tobacco_1-top-3,
+table#report-card-table .intermediate.community_tobacco_2-top-3,
+table#report-card-table .intermediate.community_phys_1-top-3,
+table#report-card-table .intermediate.community_diet_1-top-3,
+table#report-card-table .intermediate.community_diet_2-top-3,
+table#report-card-table .intermediate.community_diet_3-top-3,
+table#report-card-table .intermediate.school_phys_1-top-3,
+table#report-card-table .intermediate.school_phys_2-top-3,
+table#report-card-table .intermediate.school_diet_1-top-3,
+table#report-card-table .intermediate.school_diet_2-top-3,
+table#report-card-table .intermediate.school_cpr_1-top-3,
+table#report-card-table .intermediate.care_factors_1-top-3,
+table#report-card-table .intermediate.care_acute_1-top-3,
+table#report-card-table .intermediate.care_acute_2-top-3 {
+	background-image: url('../im/intermediate_40_star.png');
 }
 
 table#report-card-table .poor,
@@ -267,6 +300,24 @@ table#report-card-table-sticky .poor{
 	background-repeat:no-repeat;
 	background-position:center center
 }
+table#report-card-table .poor.community_tobacco_1-top-3,
+table#report-card-table .poor.community_tobacco_2-top-3,
+table#report-card-table .poor.community_phys_1-top-3,
+table#report-card-table .poor.community_diet_1-top-3,
+table#report-card-table .poor.community_diet_2-top-3,
+table#report-card-table .poor.community_diet_3-top-3,
+table#report-card-table .poor.school_phys_1-top-3,
+table#report-card-table .poor.school_phys_2-top-3,
+table#report-card-table .poor.school_diet_1-top-3,
+table#report-card-table .poor.school_diet_2-top-3,
+table#report-card-table .poor.school_cpr_1-top-3,
+table#report-card-table .poor.care_factors_1-top-3,
+table#report-card-table .poor.care_acute_1-top-3,
+table#report-card-table .poor.care_acute_2-top-3 {
+	background-image: url('../im/poor_40_star.png');
+}
+
+
 table#report-card-table-sticky tr,
 table#report-card-table tr{
 	height:60px;
